create swagger docs for create todo endpoint
